--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,16 +3,13 @@ pipeline{
   agent any
   
   stages {
-    def cmd_exec(command) {
-    return bat(returnStdout: true, script: "${command}").trim()
-    }
     
     stage("run frontend") {
     
       steps {
         echo 'Executing yarn'
         nodejs('Node-10.17') {
-            cmd_exec('bat "yarn install"')
+            bat "yarn install"
         }
       }
     }
@@ -22,7 +19,7 @@ pipeline{
       steps {
         echo 'Executing gradle'
         withGradle() {
-            cmd_exec('bat "./gradlew -v"')
+            bat "./gradlew -v"
         }
       }
     }
